# hello-any-world

./: .dockerignore  .env.example  .gitignore  README.md  go.mod  go.sum  go.work  go.work.sum  package-lock.json  package.json  plan.md  planexpress.md  readme-setup.md  requirements.txt  run_python_server.py  run_python_server.sh
.github/workflows/: deploy-express.yaml  deploy-nextjs.yaml  deploy-python.yaml  deploy.yaml
.zed/: settings.json
app/: main.py
db/: connection.py
express_db/: index.js
express_server/: Dockerfile  index.js  package.json
go_server/: go.mod  go.sum  main.go
infra/cdk/: cdk.json  package-lock.json  package.json
infra/cdk/lib/: config.ts  eks-stack.ts
infra/cdk/lib/lambda/: express-db-bootstrap.ts
infra/helm/express-server/templates/: deployment.yaml  envfile.yaml  ingress.yaml
infra/helm/nextjs-server/templates/: deployment.yaml
infra/helm/python-server/: values.yaml
infra/helm/python-server/templates/: deployment.yaml
python_db/: pyproject.toml
python_db/migrations/: env.py
python_db/python_db/: __init__.py  database.py
python_server/: Dockerfile  README.md  config.py  index.py  main.py  pyproject.toml
python_server/api/: __init__.py  health.py  main.py
python_server/services/: __init__.py
python_utils/: pyproject.toml
pythonapp/api/: main.py
web/: Dockerfile  package.json  start-database.sh
web/src/: env.js
web_db/prisma/: schema.prisma
