[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_db"
version = "0.1.0"
description = "Database layer (SQLAlchemy + Pydantic) for hello-all-worlds"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python_db*"]